# routes/user/index.js
@@ -6,9 +6,10 @@ const validator = require("../../utils/validator");
 const auth = require("../../middleware/authenticate");
 
 router.post("/signup", validator("signup", "body"), authController.signup);
+router.post("/activate", authController.activateAccount);
 router.post("/login", authController.signin);
-router.get("/profile", auth(), authController.profile);
-router.patch("/account", auth(), authController.editAccount);
+router.get("/profile", auth(true), authController.profile);
+router.patch("/account", auth(true), authController.editAccount);
 router.post("/requestPasswordReset", passwordReset.requestPasswordRequest);
 router.post("/sendOtp", passwordReset.sendOtp);
 router.post("/verifyOtp", passwordReset.verifyOtp);
